--- a/src/App.css
+++ b/src/App.css
@@ -1,8 +1,9 @@
+/* Neutralize Vite template styles so our `.container` controls layout */
 #root {
-  max-width: 1280px;
-  margin: 0 auto;
-  padding: 2rem;
-  text-align: center;
+  max-width: none;
+  margin: 0;
+  padding: 0;
+  text-align: initial;
 }
 
 .logo {
